# copilot_training

./: README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: codeql.yml
c101/: README.md
c101/src/: __init__.py  app101.py
c201/: README.md
c201/qa/: specs.md
c201/qa/cypress-example/: README.md  cypress.config.js  package.json
c201/qa/cypress-example/cypress/e2e/: app201.cy.js
c201/qa/cypress-example/cypress/fixtures/: cat.json  dog.json  rabbit.json
c201/qa/cypress-example/cypress/support/: commands.js  e2e.js
c201/src/: __init__.py  app201.py
setup/: SETUP.md  auto_setup_script_mac.sh  auto_setup_script_windows.bat  mac_setup.md  repo_forking_and_cloning.md  repo_setup_with_zip_file.md  windows_setup.md
tests/: test_app201.py
